--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,7 +7,7 @@ $color-text-light: #FDF3F3;
 $color-text-dark: #ffd7d7;
 
 //Breakpoints
-
+$bp-small: 37.5em;
 
 //Default settings
 
