--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -63,7 +63,7 @@
   background-position: 0 -70px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: $bp-small) {
 
   .container {
     padding-right: 0;
@@ -98,7 +98,7 @@
   .play-sprite{
     top: 50%;
     left: 52%;
-    margin: -29px 0 0 -86px;
+    margin: -29px 0 0 -87px;
     background-size: cover;
     height: 7vw;
     width: 7vw;
