--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -12,12 +12,20 @@
   display: flex;
   flex-direction: column;
   min-height: 10vh;
+
+  @media only screen and (max-width: $bp-small) {
+    min-height: 13vh;
+  }
 }
 .nav{
   display: flex;
   align-items: center;
   justify-content: flex-start;
   height: 10vh;
+
+  @media only screen and (max-width: $bp-small) {
+    height: 13vh;
+  }
 }
 
 .head{
@@ -41,7 +49,13 @@
   align-items: center;
   text-align: center;
   margin-top: 1.5rem;
+  //min-height: 12vh;
 
+  @media only screen and (max-width: $bp-small) {
+    min-height: 12vh;
+    margin-top: 3rem;
+    padding-top: 3rem;
+  }
 }
 
 .container{
@@ -59,7 +73,14 @@
   z-index: 10;
   padding-right: 29rem;
   padding-left: 29rem;
+  //padding-top: 10rem;
+  //padding-bottom: 10rem;
 
+  @media only screen and (max-width: $bp-small) {
+    width: 100vw;
+    overflow-x: hidden;
+    min-height: 54vh;
+  }
 }
 
 .footer{
